# PiAA2.2

./: .gitignore  CMakeLists.txt  README.md  input.txt  test_crash.cpp
include/: AIPlayer.h  AIPlayer.hpp  Board.h  Board.hpp  ConsoleRenderer.h  Game.h  Game.hpp  GameRules.hpp  HumanPlayer.h  HumanPlayer.hpp  Player.h  Player.hpp  Renderer.h  SFMLRenderer.h  SFMLRenderer.hpp  Types.hpp
src/: AIPlayer.cpp  Board.cpp  ConsoleRenderer.cpp  Game.cpp  GameRules.cpp  HumanPlayer.cpp  SFMLRenderer.cpp  console_main.cpp  main.cpp
